--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
         button {
             padding: 10px 15px;
             font-size: 16px;
-            cursor: not-allowed;
             background-color: gray;
-            border: none;
             color: white;
+            border: none;
             border-radius: 5px;
+            cursor: not-allowed;
         }
         button.enabled {
             background-color: green;
@@ -44,7 +44,7 @@
         <h2>Online Test</h2>
         <p class="timer">Time left: <span id="time">10:00</span></p>
 
-        <!-- Sample Questions -->
+        <!-- Sample Question -->
         <p>1. What is 2 + 2?</p>
         <input type="radio" name="q1" value="3"> 3
         <input type="radio" name="q1" value="4"> 4
@@ -66,7 +66,7 @@
 
             if (timeLeft === 0) {
                 clearInterval(timer);
-                submitBtn.disabled = false;
+                submitBtn.disabled = false; // Enable the button
                 submitBtn.classList.add("enabled");
                 submitBtn.textContent = "Submit Now";
                 submitBtn.style.cursor = "pointer";
@@ -78,12 +78,12 @@
         // Start the countdown
         let timer = setInterval(updateTimer, 1000);
 
-        // Auto-submit when time ends
+        // Show confirmation message before submitting
         submitBtn.addEventListener("click", function() {
-            alert("Are you sure about submitting the test?");
-            setTimeout(() => {
+            let confirmSubmit = confirm("Are you sure about submitting the test?");
+            if (confirmSubmit) {
                 alert("Test Submitted Successfully! 🎉");
-            }, 500);
+            }
         });
     </script>
 
