--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
         button {
             padding: 10px 15px;
             font-size: 16px;
-            background-color: gray;
-            color: white;
-            border: none;
-            border-radius: 5px;
             cursor: not-allowed;
+            background-color: gray;
+            border: none;
+            color: white;
+            border-radius: 5px;
         }
         button.enabled {
             background-color: green;
@@ -42,9 +42,9 @@
 
     <div class="container">
         <h2>Online Test</h2>
-        <p class="timer">Time left: <span id="time">10:00</span></p>
+        <p class="timer">Time left: <span id="time">2:00</span></p>
 
-        <!-- Sample Question -->
+        <!-- Sample Questions -->
         <p>1. What is 2 + 2?</p>
         <input type="radio" name="q1" value="3"> 3
         <input type="radio" name="q1" value="4"> 4
@@ -55,7 +55,7 @@
     </div>
 
     <script>
-        let timeLeft = 10 * 60; // 10 minutes in seconds
+        let timeLeft = 2 * 60; // 2 minutes in seconds
         let timerElement = document.getElementById("time");
         let submitBtn = document.getElementById("submitBtn");
 
@@ -66,7 +66,7 @@
 
             if (timeLeft === 0) {
                 clearInterval(timer);
-                submitBtn.disabled = false; // Enable the button
+                submitBtn.disabled = false;
                 submitBtn.classList.add("enabled");
                 submitBtn.textContent = "Submit Now";
                 submitBtn.style.cursor = "pointer";
@@ -78,12 +78,12 @@
         // Start the countdown
         let timer = setInterval(updateTimer, 1000);
 
-        // Show confirmation message before submitting
+        // Auto-submit when time ends
         submitBtn.addEventListener("click", function() {
-            let confirmSubmit = confirm("Are you sure about submitting the test?");
-            if (confirmSubmit) {
+            alert("Are you sure about submitting the test?");
+            setTimeout(() => {
                 alert("Test Submitted Successfully! 🎉");
-            }
+            }, 500);
         });
     </script>
 
