--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         submitBtn.addEventListener("click", function() {
             alert("Are you sure about submitting the test?");
             setTimeout(() => {
-                alert("Test Submitted Successfully! 🎉");
+                alert(" You're INDUCTED Successfully 🎉");
             }, 500);
         });
     </script>
