--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Online Test</title>
     <style>
+        /* 🎨 Background with Faded Effect */
         body {
             font-family: 'Times New Roman', serif;
             text-align: center;
-            background-color: black;
+            background: url('background.jpg') no-repeat center center fixed;
+            background-size: cover;
             color: white;
             height: 100vh;
             display: flex;
@@ -16,6 +18,20 @@
             align-items: center;
             position: relative;
         }
+
+        /* 🌫 Faded Overlay Effect */
+        body::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5); /* Adjust opacity for fading */
+            z-index: -1;
+        }
+
+        /* 🔹 Login Box */
         .container {
             background: rgba(255, 255, 255, 0.9);
             padding: 25px;
@@ -23,7 +39,9 @@
             box-shadow: 0px 0px 15px rgba(255, 255, 255, 0.3);
             color: black;
             position: relative;
+            width: 350px;
         }
+
         /* 🏆 Logo Styling */
         .logo {
             position: absolute;
@@ -32,18 +50,25 @@
             width: 80px; /* Adjust size */
             height: auto;
         }
+
+        /* 🔹 Input Fields & Buttons */
         input, select, button {
-            padding: 10px;
+            padding: 12px;
             margin: 10px;
+            width: 90%;
             font-size: 16px;
             border-radius: 5px;
             border: 1px solid gray;
+            display: block;
         }
+
         button {
             background-color: green;
             color: white;
             cursor: pointer;
+            font-weight: bold;
         }
+
         button:hover {
             background-color: darkgreen;
         }
@@ -57,13 +82,13 @@
     <div class="container">
         <h2>🔹 Enter Your Details</h2>
         <form id="loginForm">
-            <input type="text" id="name" placeholder="Enter your Name" required><br>
-            <input type="text" id="roll" placeholder="Enter your Roll Number" required><br>
+            <input type="text" id="name" placeholder="Enter your Name" required>
+            <input type="text" id="roll" placeholder="Enter your Roll Number" required>
             <select id="subject">
                 <option value="math">Math</option>
                 <option value="physics">Physics</option>
                 <option value="chemistry">Chemistry</option>
-            </select><br>
+            </select>
             <button type="submit">Start Test</button>
         </form>
     </div>
