--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Online Test</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
-        /* 🎨 Background with Faded Effect */
+        /* 🌆 Background Image with Proper Scaling */
         body {
-            font-family: 'Times New Roman', serif;
+            font-family: 'Poppins', sans-serif;
             text-align: center;
-            background: url('background.jpg') no-repeat center center fixed;
+            background: url('image.png') no-repeat center center fixed; 
             background-size: cover;
-            color: white;
             height: 100vh;
             display: flex;
             justify-content: center;
@@ -19,7 +19,7 @@
             position: relative;
         }
 
-        /* 🌫 Faded Overlay Effect */
+        /* 🎨 Faded Overlay for Better Visibility */
         body::before {
             content: "";
             position: absolute;
@@ -27,68 +27,91 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.5); /* Adjust opacity for fading */
+            background: rgba(0, 0, 0, 0.5); /* Slightly darker fade for better contrast */
             z-index: -1;
         }
 
-        /* 🔹 Login Box */
+        /* 🎯 Modern Login Container */
         .container {
-            background: rgba(255, 255, 255, 0.9);
-            padding: 25px;
-            border-radius: 15px;
-            box-shadow: 0px 0px 15px rgba(255, 255, 255, 0.3);
+            background: rgba(255, 255, 255, 0.95); /* Softer white */
+            padding: 35px;
+            border-radius: 20px;
+            box-shadow: 0px 4px 20px rgba(255, 255, 255, 0.3);
             color: black;
             position: relative;
-            width: 350px;
+            width: 400px; /* Slightly wider */
+            text-align: center;
         }
 
-        /* 🏆 Logo Styling */
+        /* 🏆 Logo Styling (Top-Right) */
         .logo {
             position: absolute;
             top: 20px;
             right: 20px;
-            width: 80px; /* Adjust size */
+            width: 90px;
             height: auto;
         }
 
-        /* 🔹 Input Fields & Buttons */
-        input, select, button {
-            padding: 12px;
-            margin: 10px;
-            width: 90%;
-            font-size: 16px;
-            border-radius: 5px;
-            border: 1px solid gray;
-            display: block;
+        /* 🔷 Stylish Title */
+        h2 {
+            font-weight: 600;
+            font-size: 22px;
+            margin-bottom: 15px;
+            color: #333;
         }
 
+        /* ✏️ Input Fields with Stylish Borders */
+        input, select {
+            width: 100%;
+            padding: 12px;
+            margin: 10px 0;
+            font-size: 16px;
+            border-radius: 8px;
+            border: 2px solid #ddd;
+            outline: none;
+            transition: 0.3s;
+        }
+
+        input:focus, select:focus {
+            border-color: #007bff; /* Blue highlight */
+            box-shadow: 0px 0px 10px rgba(0, 123, 255, 0.4);
+        }
+
+        /* ✅ Improved Button Styling */
         button {
-            background-color: green;
+            width: 100%;
+            padding: 12px;
+            background: linear-gradient(45deg, #28a745, #218838); /* Gradient effect */
             color: white;
-            cursor: pointer;
+            font-size: 18px;
             font-weight: bold;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            transition: 0.3s;
         }
 
         button:hover {
-            background-color: darkgreen;
+            background: linear-gradient(45deg, #218838, #1e7e34);
+            box-shadow: 0px 4px 10px rgba(0, 255, 0, 0.3);
         }
     </style>
 </head>
 <body>
 
-    <!-- 🏆 Logo Image (Top Right) -->
-    <img src="logo.png" alt="Logo" class="logo">
+    <!-- 🏆 IGNITTE Logo (Top Right) -->
+    <img src="logo.png" alt="IGNITTE Logo" class="logo">
 
     <div class="container">
         <h2>🔹 Enter Your Details</h2>
         <form id="loginForm">
-            <input type="text" id="name" placeholder="Enter your Name" required>
-            <input type="text" id="roll" placeholder="Enter your Roll Number" required>
+            <input type="text" id="name" placeholder="Enter your Name" required><br>
+            <input type="text" id="roll" placeholder="Enter your Roll Number" required><br>
             <select id="subject">
                 <option value="math">Math</option>
                 <option value="physics">Physics</option>
                 <option value="chemistry">Chemistry</option>
-            </select>
+            </select><br>
             <button type="submit">Start Test</button>
         </form>
     </div>
