--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         body {
             font-family: 'Poppins', sans-serif;
             text-align: center;
-            background: url('image.png') no-repeat center center fixed; 
+            background: url('background.jpg') no-repeat center center fixed; 
             background-size: cover;
             height: 100vh;
             display: flex;
